--- a/www/report/visual.html
+++ b/www/report/visual.html
@@ -1,10 +1,10 @@
 ---
-title: Visual Logo List
+title: Visual Logo Inventory
 layout: default
+redirect_from: /logos/visual.html
 ---
-{% assign sorted_pages = site.pages | sort:'sort' %}
-{% assign imgcount = 0 %}
-
+{%- assign sorted_pages = site.pages | sort:'sort' -%}
+{%- assign imgcount = 0 -%}
 <table class="table table-striped table-bordered">
     <thead>
     <tr>
