font awesome pro

--- a/www/util/preview.html
+++ b/www/util/preview.html
@@ -11,7 +11,7 @@ layout: none
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>{{ page.title }}</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
-	<link href="/css/font-awesome.css" rel="stylesheet" type="text/css" />
+	<link href="/css/fontawesome-all.css" rel="stylesheet" type="text/css" />
 	<script src="/js/jquery-2.1.4.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
     <script src="/js/Vibrant.js"></script>
@@ -38,9 +38,9 @@ layout: none
 		<div class="container">
 <p class="navbar-text hidden-xs hidden-sm" href="/">Image Preview</p>
 <div class="btn-group" role="group" aria-label="Background">
-  <button class="btn btn-default navbar-btn background-btn" data-background="grid" title="Checkboard background" type="button"><i class="fa fa-th-large"></i></button>
-  <button class="btn btn-default navbar-btn background-btn" data-background="dark" title="Dark background" type="button"><i class="fa fa-stop"></i></button>
-  <button class="btn btn-default navbar-btn background-btn active" data-background="light" title="Light Background" type="button"><i class="fa fa-square-o"></i></button>
+  <button class="btn btn-default navbar-btn background-btn" data-background="grid" title="Checkboard background" type="button"><i class="fas fa-th-large"></i></button>
+  <button class="btn btn-default navbar-btn background-btn" data-background="dark" title="Dark background" type="button"><i class="fas fa-square"></i></button>
+  <button class="btn btn-default navbar-btn background-btn active" data-background="light" title="Light Background" type="button"><i class="far fa-square"></i></button>
 </div>
 
 <div class="btn-group" role="group" aria-label="Zoom">
@@ -56,7 +56,7 @@ layout: none
   <button type="button" class="btn btn-default navbar-btn border-btn" data-border="4" title="Thick border">Thick</button>
 </div>
 
-<a class="btn btn-default navbar-btn hidden-xs" id="color_analysis" title="Color Analysis" data-toggle="popover" data-title="Color Analysis" data-html="true" data-placement="auto bottom"><i class="fa fa-eyedropper"></i></a>
+<a class="btn btn-default navbar-btn hidden-xs" id="color_analysis" title="Color Analysis" data-toggle="popover" data-title="Color Analysis" data-html="true" data-placement="auto bottom"><i class="far fa-eye-dropper"></i></a>
 <a class="btn btn-default navbar-btn hidden-xs" id="btn-download" title="Download"><i class="fa fa-download"></i></a>
 <a class="btn btn-default navbar-btn" href="/" id="btn-exit" title="Exit Preview"><i class="fa fa-sign-out"></i></a>
 			
