powered by ffi on convert to png

--- a/www/util/convert_to_png.html
+++ b/www/util/convert_to_png.html
@@ -42,6 +42,12 @@ layout: shoelace
     </div>
 </form>
 
+<div class="row">
+    <div class="col text-center">
+        <small>Powered by <a href="https://www.fileformat.info/convert/image/svg2raster.htm">FileFormat.Info</a>!</small>
+    </div>
+</div>
+
 <script>
     $(function() {
 
