allow additional keywords to help with search

--- a/www/search.html
+++ b/www/search.html
@@ -33,6 +33,7 @@ $(function() {
 	window.idx = lunr(function () {
 			this.field('id');
 			this.field('title', { boost: 10 });
+			this.field('keywords');
 			this.field('website');
 			this.field('category');
 		});
