more social media logos

--- a/www/report/tile-vs-supertiny.html
+++ b/www/report/tile-vs-supertiny.html
@@ -76,7 +76,7 @@ redirect_from: /util/tile-vs-supertiny.html
         {%- if logopage.images contains tilefile and sti_file != '-' -%}
         <tr>
             <td>
-                <div class="img-container"><img alt="tile of {{logopage.title}}" class="img-preview" src="{{site.production_url}}/logos/{{logopage.logohandle}}/{{tilefile}}" />
+                <div class="img-container"><img alt="tile of {{logopage.title}}" class="img-preview" src="/logos/{{logopage.logohandle}}/{{tilefile}}" />
                     <div class="overlay">
                         <img class="img-overlay" src="/images/overlay/tile-hollow.svg" />
                     </div>
